--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "calc.mjs",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "node test/evaluate.test.js",
     "start": "node calc.mjs"
   },
   "repository": {
